--- a/testing.html
+++ b/testing.html
@@ -681,6 +681,7 @@
   </div>
 </div>
 
+
         <div id="news-Boxing" class="content-section" style="display: none;">
           Placeholder content for Boxing (News)
         </div>
@@ -951,6 +952,9 @@
           "#feed-PGATour .feed-content",
           "https://rss.app/feeds/_QQsPX3f8GnzYvAXX.xml"
         ); // PGA Tour
+fetchFeed("#feed-UFC .feed-content", "https://rss.app/feeds/_YGmr1TjOD0yXmfU1.xml");
+
+
 
         // Existing menu functionality
         let selectedSection = "Home";
@@ -1081,6 +1085,7 @@
     </script>
   </body>
 </html>
+
 
 
 
