--- a/testing.html
+++ b/testing.html
@@ -745,74 +745,74 @@
     </div>
 
     <!-- SINGLE RSS.app script load (only once) -->
-    <script src="https://widget.rss.app/v1/feed.js" async></script>
+  <script src="https://widget.rss.app/v1/feed.js" async></script>
+<script>
+  // Place the mapping object here, at the very top:
+  const rssFeeds = {
+    Home: "_W0ZzValCUhv9Q88Y",
+    UFC: "D7Pzjs1eNyeNfRZg",
+    MLB: "_wcNmb7Pr9SpM8BQ4",
+    NBA: "5RV6ZHeyJhWxORz5",
+    NFL: "INJ6Bk4bDkbmuBbD",
+    NHL: "pNuN9vyuvzYgmCmy",
+    UEFAChampionsLeague: ["_UEFASocialFeed", "fJDD9RMqob2qCjwA"],
+    PremierLeague: ["_PremierSocialFeed", "neXmnwbubK21ZWYF"],
+    MLS: "9EAOd7JHtY1IRVUP",
+    Bundesliga: "YPjYmfSS1NyBDka8",
+    LaLiga: "iatyOkXWhSWdum53",
+    SerieA: "zbTyEkE5gjqLEv3s",
+    Soccer: "YhR2LGbhScpKNkzd",
+    FACup: "2zqHVQtHCIa3PVME",
+    LigaMX: "ExlLtrY7vEkY58OK",
+    NWSL: "YuC1qAhWubEURaom",
+    Ligue1: "WMDUyBIu1k0aSUYq",
+    UEFAEuropaLeague: "7ONIKeDn4stczUat",
+    UEFAConferenceLeague: "F5l3pTQwaGkBrFJk",
+    FormulaOne: "s7r6yAgtrA3k2dJw",
+    NCAAF: "AnA5shmkBJ7gdzCs",
+    PGATour: "c2yYJn0ed57eix3y"
+  };
 
-    <!-- Lazy Load Social Feeds Script -->
-    <script>
-      // Updated rssFeeds: For UEFAChampionsLeague and PremierLeague, we use an array of feed IDs
-      const rssFeeds = {
-        Home: "_W0ZzValCUhv9Q88Y",
-        MLB: "_wcNmb7Pr9SpM8BQ4",
-        NBA: "5RV6ZHeyJhWxORz5",
-        NFL: "INJ6Bk4bDkbmuBbD",
-        NHL: "pNuN9vyuvzYgmCmy",
-        UEFAChampionsLeague: ["_UEFASocialFeed", "fJDD9RMqob2qCjwA"],
-        PremierLeague: ["_PremierSocialFeed", "neXmnwbubK21ZWYF"],
-        MLS: "9EAOd7JHtY1IRVUP",
-        Bundesliga: "YPjYmfSS1NyBDka8",
-        LaLiga: "iatyOkXWhSWdum53",
-        SerieA: "zbTyEkE5gjqLEv3s",
-        Soccer: "YhR2LGbhScpKNkzd",
-        FACup: "2zqHVQtHCIa3PVME",
-        LigaMX: "ExlLtrY7vEkY58OK",
-        NWSL: "YuC1qAhWubEURaom",
-        Ligue1: "WMDUyBIu1k0aSUYq",
-        UEFAEuropaLeague: "7ONIKeDn4stczUat",
-        UEFAConferenceLeague: "F5l3pTQwaGkBrFJk",
-        FormulaOne: "s7r6yAgtrA3k2dJw",
-        NCAAF: "AnA5shmkBJ7gdzCs",
-        PGATour: "c2yYJn0ed57eix3y"
-      };
+  let currentFeed = null;
 
-      let currentFeed = null;
-
-      function loadSocialFeed(section) {
-        const container = document.getElementById("social-feed-container");
-        if (currentFeed === section) return;
-        container.innerHTML = "";
-        const feedId = rssFeeds[section];
-        if (feedId) {
-          if (Array.isArray(feedId)) {
-            feedId.forEach(id => {
-              const feedTag = document.createElement("rssapp-feed");
-              feedTag.setAttribute("id", id);
-              container.appendChild(feedTag);
-            });
-          } else {
-            const feedTag = document.createElement("rssapp-feed");
-            feedTag.setAttribute("id", feedId);
-            container.appendChild(feedTag);
-          }
-        } else {
-          container.innerHTML =
-            "<div style='padding: 10px; font-size: 12px;'>No social feed available for this section.</div>";
-        }
-        currentFeed = section;
-      }
-
-      document.addEventListener("DOMContentLoaded", () => {
-        // Load default feed (Home) on page load
-        loadSocialFeed("Home");
-
-        // Bind lazy loading to menu item clicks
-        document.querySelectorAll("#menuList li[data-section]").forEach(item => {
-          item.addEventListener("click", () => {
-            const section = item.dataset.section;
-            loadSocialFeed(section);
-          });
+  function loadSocialFeed(section) {
+    const container = document.getElementById("social-feed-container");
+    if (currentFeed === section) return;
+    container.innerHTML = "";
+    const feedId = rssFeeds[section];
+    if (feedId) {
+      if (Array.isArray(feedId)) {
+        feedId.forEach(id => {
+          const feedTag = document.createElement("rssapp-feed");
+          feedTag.setAttribute("data-feed-id", id);
+          container.appendChild(feedTag);
         });
+      } else {
+        const feedTag = document.createElement("rssapp-feed");
+        feedTag.setAttribute("data-feed-id", feedId);
+        container.appendChild(feedTag);
+      }
+    } else {
+      container.innerHTML =
+        "<div style='padding: 10px; font-size: 12px;'>No social feed available for this section.</div>";
+    }
+    currentFeed = section;
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    // Load default feed (Home) on page load
+    loadSocialFeed("Home");
+
+    // Bind lazy loading to menu item clicks
+    document.querySelectorAll("#menuList li[data-section]").forEach(item => {
+      item.addEventListener("click", () => {
+        const section = item.dataset.section;
+        loadSocialFeed(section);
       });
-    </script>
+    });
+  });
+</script>
+
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
