--- a/testing.html
+++ b/testing.html
@@ -770,7 +770,8 @@
         UEFAConferenceLeague: "F5l3pTQwaGkBrFJk",
         FormulaOne: "s7r6yAgtrA3k2dJw",
         NCAAF: "AnA5shmkBJ7gdzCs",
-        PGATour: "c2yYJn0ed57eix3y"
+        PGATour: "c2yYJn0ed57eix3y",
+        UFC: "D7Pzjs1eNyeNfRZg"
       };
 
       let currentFeed = null;
