--- a/testing.html
+++ b/testing.html
@@ -952,7 +952,12 @@
           "#feed-PGATour .feed-content",
           "https://rss.app/feeds/_QQsPX3f8GnzYvAXX.xml"
         ); // PGA Tour
-
+        fetchFeed(
+          "#feed-UFC .feed-content",
+          "https://rss.app/feeds/_YGmr1TjOD0yXmfU1.xml"
+        ); // UFC
+        
+        
         // Existing menu functionality
         let selectedSection = "Home";
         document.querySelectorAll(".menu-filter").forEach(filter => {
