--- a/testing.html
+++ b/testing.html
@@ -956,6 +956,54 @@
           "#feed-UFC .feed-content",
           "https://rss.app/feeds/_YGmr1TjOD0yXmfU1.xml"
         ); // UFC
+        fetchFeed(
+          "#feed-Boxing .feed-content",
+          "https://rss.app/feeds/_7DfbEtxpn8RPNIMf.xml"
+        ); // Boxing
+        fetchFeed(
+          "#feed-NASCARCupSeries .feed-content",
+          "https://rss.app/feeds/_D7Q3jbrHjR3bGj8O.xml"
+        ); // NASCAR Cup Series
+        fetchFeed(
+          "#feed-Tennis .feed-content",
+          "https://rss.app/feeds/_tGSXi2957CegL2kC.xml"
+        ); // Tennis
+        fetchFeed(
+          "#feed-WNBA .feed-content",
+          "https://rss.app/feeds/_JsIgbwln4EnDHpSE.xml"
+        ); // WNBA
+        fetchFeed(
+          "#feed-LIVGolf .feed-content",
+          "https://rss.app/feeds/_s7tH2abPc7ZQXhLp.xml"
+        ); // LIV Golf
+        fetchFeed(
+          "#feed-IndyCar .feed-content",
+          "https://rss.app/feeds/_TqIJuTCX0SmFe0lM.xml"
+        ); // IndyCar
+        fetchFeed(
+          "#feed-NCAAM .feed-content",
+          "https://rss.app/feeds/_va6EQaZAxOx6z8xR.xml"
+        ); // NCAAM
+        fetchFeed(
+          "#feed-NCAAW .feed-content",
+          "https://rss.app/feeds/_2P4NcD95YPwU8T51.xml"
+        ); // NCAAW
+        fetchFeed(
+          "#feed-NCAABaseball .feed-content",
+          "https://rss.app/feeds/_q2SYr186Ed7j8jud.xml"
+        ); // NCAABaseball
+        fetchFeed(
+          "#feed-NCAASoftball .feed-content",
+          "https://rss.app/feeds/_y4zf68Y0lK5bkT47.xml"
+        ); // NCAASoftball
+        fetchFeed(
+          "#feed-MotoGP .feed-content",
+          "https://rss.app/feeds/_4Bpke8POCqxzxfKq.xml"
+        ); // MotoGP
+        fetchFeed(
+          "#feed-LPGATour .feed-content",
+          "https://rss.app/feeds/_a4W47htGlhRlO2ju.xml"
+        ); // LPGA TOUR
         
         
         // Existing menu functionality
