--- a/index.html
+++ b/index.html
@@ -662,23 +662,76 @@
     <div class="feed-content">Loading PGA Tour feed...</div>
   </div>
 </div>
+<div id="news-Tennis" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-Tennis">
+    <h4>Tennis</h4>
+    <div class="feed-content">Loading Tennis feed...</div>
+  </div>
+</div>
 
-      <div id="news-UFC" class="content-section" style="display: none;">Placeholder content for UFC (News)</div>
-      <div id="news-Boxing" class="content-section" style="display: none;">Placeholder content for Boxing (News)</div>
-      <div id="news-NASCARCupSeries" class="content-section" style="display: none;">Placeholder content for NASCAR Cup Series (News)</div>
-      <div id="news-Tennis" class="content-section" style="display: none;">Placeholder content for Tennis (News)</div>
-      <div id="news-WNBA" class="content-section" style="display: none;">Placeholder content for WNBA (News)</div>
-      <div id="news-LIVGolf" class="content-section" style="display: none;">Placeholder content for LIV Golf (News)</div>
-      <div id="news-IndyCar" class="content-section" style="display: none;">Placeholder content for IndyCar (News)</div>
-      <div id="news-NCAAM" class="content-section" style="display: none;">Placeholder content for NCAAM (News)</div>
-      <div id="news-NCAAW" class="content-section" style="display: none;">Placeholder content for NCAAW (News)</div>
-      <div id="news-UFL" class="content-section" style="display: none;">Placeholder content for UFL (News)</div>
-      <div id="news-NCAABaseball" class="content-section" style="display: none;">Placeholder content for NCAA Baseball (News)</div>
-      <div id="news-NCAASoftball" class="content-section" style="display: none;">Placeholder content for NCAA Softball (News)</div>
-      <div id="news-MotoGP" class="content-section" style="display: none;">Placeholder content for MotoGP (News)</div>
-      <div id="news-LPGATour" class="content-section" style="display: none;">Placeholder content for LPGA Tour (News)</div>
-      <div id="news-TrackAndField" class="content-section" style="display: none;">Placeholder content for Track &amp; Field (News)</div>
-    </div>
+<div id="news-WNBA" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-WNBA">
+    <h4>WNBA</h4>
+    <div class="feed-content">Loading WNBA feed...</div>
+  </div>
+</div>
+
+<div id="news-LIVGolf" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-LIVGolf">
+    <h4>LIV Golf</h4>
+    <div class="feed-content">Loading LIV Golf feed...</div>
+  </div>
+</div>
+
+<div id="news-IndyCar" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-IndyCar">
+    <h4>IndyCar</h4>
+    <div class="feed-content">Loading IndyCar feed...</div>
+  </div>
+</div>
+
+<div id="news-NCAAM" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-NCAAM">
+    <h4>NCAAM</h4>
+    <div class="feed-content">Loading NCAAM feed...</div>
+  </div>
+</div>
+
+<div id="news-NCAAW" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-NCAAW">
+    <h4>NCAAW</h4>
+    <div class="feed-content">Loading NCAAW feed...</div>
+  </div>
+</div>
+
+<div id="news-NCAABaseball" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-NCAABaseball">
+    <h4>NCAA Baseball</h4>
+    <div class="feed-content">Loading NCAA Baseball feed...</div>
+  </div>
+</div>
+
+<div id="news-NCAASoftball" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-NCAASoftball">
+    <h4>NCAA Softball</h4>
+    <div class="feed-content">Loading NCAA Softball feed...</div>
+  </div>
+</div>
+
+<div id="news-MotoGP" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-MotoGP">
+    <h4>MotoGP</h4>
+    <div class="feed-content">Loading MotoGP feed...</div>
+  </div>
+</div>
+
+<div id="news-LPGATour" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-LPGATour">
+    <h4>LPGA Tour</h4>
+    <div class="feed-content">Loading LPGA Tour feed...</div>
+  </div>
+</div>
+
     
     <!-- DIVIDER BETWEEN NEWS PANEL AND SOCIAL PANEL -->
     <div class="divider"></div>
