--- a/testing.html
+++ b/testing.html
@@ -674,16 +674,12 @@
             <div class="feed-content">Loading PGA Tour feed...</div>
           </div>
         </div>
- <div id="news-UFC" class="content-section" style="display: none;">
+      <div id="news-UFC" class="content-section" style="display: none;">
   <div class="rss-feed" id="feed-UFC">
     <h4>UFC</h4>
     <div class="feed-content">Loading UFC feed...</div>
   </div>
 </div>
-
-
-
-
         <div id="news-Boxing" class="content-section" style="display: none;">
           Placeholder content for Boxing (News)
         </div>
@@ -746,276 +742,18 @@
       </div>
     </div>
 
-<script src="https://widget.rss.app/v1/feed.js" async></script>
-<script>
-  /***********************
-   * Social Feeds Loader *
-   ***********************/
-  // Mapping for all social-[section] feed IDs.
-  // Ensure each key exactly matches your menu items’ data-section attributes.
-  const rssSocialFeeds = {
-    Home: "_W0ZzValCUhv9Q88Y",
-    UFC: "D7Pzjs1eNyeNfRZg",
-    Boxing: "E4QHg9gnRHekN0eL",
-    NASCARCupSeries: "aIpvGxQaOiSfwADb",
-    Tennis: "InsXma0Pwpks5ZgB",
-    WNBA: "Am6lI6WHRaAxHmbL",
-    LIVGolf: "xTe6w6kt4LL4Hi8v",
-    IndyCar: "0J2bXOqqSpbcTt1Y",
-    NCAAM: "Zd1KfPkoPaqAlIxp",
-    NCAAW: "Aozk9D13FRvOiR16",
-    NCAABaseball: "iJ2vCYtgsHm9IR5d",
-    NCAASoftball: "ON2eWO5ApxIBiGYV",
-    MotoGP: "CKPWivTATHSyhDSN",
-    LPGATour: "RsLnkbshlMSpf2b7",
-    NFL: "INJ6Bk4bDkbmuBbD",
-    NBA: "5RV6ZHeyJhWxORz5",
-    NHL: "pNuN9vyuvzYgmCmy",
-    FormulaOne: "s7r6yAgtrA3k2dJw",
-    NCAAF: "AnA5shmkBJ7gdzCs",
-    PGATour: "c2yYJn0ed57eix3y",
-    UFC: "D7Pzjs1eNyeNfRZg" 
-  };
-
-  let currentSocialFeed = null;
-  function loadSocialFeed(section) {
-    const container = document.getElementById("social-feed-container");
-    if (currentSocialFeed === section) return;
-    container.innerHTML = "";
-    const feedId = rssSocialFeeds[section];
-    if (feedId) {
-      // If the mapping returns an array, create a widget for each ID.
-      if (Array.isArray(feedId)) {
-        feedId.forEach(id => {
-          const feedTag = document.createElement("rssapp-feed");
-          feedTag.setAttribute("data-feed-id", id);
-          container.appendChild(feedTag);
-        });
-      } else {
-        const feedTag = document.createElement("rssapp-feed");
-        feedTag.setAttribute("data-feed-id", feedId);
-        container.appendChild(feedTag);
-      }
-    } else {
-      container.innerHTML = "<div style='padding: 10px; font-size: 12px;'>No social feed available for this section.</div>";
-    }
-    currentSocialFeed = section;
-  }
-
-  /***********************
-   * News Feeds Fetcher  *
-   ***********************/
-  function fetchFeed(containerSelector, feedUrl) {
-    const container = document.querySelector(containerSelector);
-    if (!container) return;
-    fetch(feedUrl)
-      .then(res => res.text())
-      .then(str => {
-        const parser = new DOMParser();
-        const xml = parser.parseFromString(str, "application/xml");
-        const items = Array.from(xml.querySelectorAll("item"));
-        if (items.length > 0) {
-          const ul = document.createElement("ul");
-          items.forEach(item => {
-            const title = item.querySelector("title") ? item.querySelector("title").textContent : "No title";
-            const link = item.querySelector("link") ? item.querySelector("link").textContent : "#";
-            const li = document.createElement("li");
-            const a = document.createElement("a");
-            a.href = link;
-            a.target = "_blank";
-            a.textContent = title;
-            li.appendChild(a);
-            ul.appendChild(li);
-          });
-          container.innerHTML = "";
-          container.appendChild(ul);
-          ul.querySelectorAll("a").forEach(link => {
-            link.addEventListener("click", () => {
-              link.classList.add("clicked");
-            });
-          });
-        } else {
-          container.innerHTML = "<p>No items found.</p>";
-        }
-      })
-      .catch(error => {
-        console.error("Error loading feed:", error);
-        container.innerHTML = "<p>Error loading feed.</p>";
-      });
-  }
-
-  /***********************
-   * DOMContentLoaded    *
-   ***********************/
-  document.addEventListener("DOMContentLoaded", () => {
-    // -- Social Feeds --
-    // Load default social feed (Home) on page load.
-    loadSocialFeed("Home");
-    // Bind social feed loader to menu item clicks.
-    document.querySelectorAll("#menuList li[data-section]").forEach(item => {
-      item.addEventListener("click", () => {
-        loadSocialFeed(item.dataset.section);
-      });
-    });
-
-    // -- News Feeds --
-    // News feed mapping for Home panel.
-    const newsFeedMap = {
-      ESPN: "https://www.espn.com/espn/rss/news",
-      CBS: "https://rss.app/feeds/oVrPZDHkkJB8bEKG.xml",
-      FOX: "https://rss.app/feeds/KzC1hdnt93oattSD.xml",
-      Yahoo: "https://rss.app/feeds/3BSRBZ6GJrUbB5PC.xml"
-    };
-    Object.entries(newsFeedMap).forEach(([key, url]) => {
-      fetchFeed(`#feed-${key} .feed-content`, url);
-    });
-
-    // Existing custom news feeds.
-    fetchFeed("#feed-_6gzCeS4YQ4h2adTs .feed-content", "https://rss.app/feeds/_6gzCeS4YQ4h2adTs.xml"); // MLB
-    fetchFeed("#feed-_ja3fYEA7yigAcmAk .feed-content", "https://rss.app/feeds/_ja3fYEA7yigAcmAk.xml"); // NBA
-    fetchFeed("#feed-_iiyR3EPoC5QXMnqt .feed-content", "https://rss.app/feeds/_iiyR3EPoC5QXMnqt.xml"); // NFL
-    fetchFeed("#feed-_pBOHW7eyjbGkaiZq .feed-content", "https://rss.app/feeds/_pBOHW7eyjbGkaiZq.xml"); // MLS
-    fetchFeed("#feed-PremierLeague .feed-content", "https://rss.app/feeds/_zvRqo1UuuoLB5czl.xml"); // Premier League
-    fetchFeed("#feed-UEFAChampionsLeague .feed-content", "https://rss.app/feeds/_BnF56qFhfPBsVZ6I.xml"); // UEFA Champions League
-    fetchFeed("#feed-SerieA .feed-content", "https://rss.app/feeds/_IEjWrVaKRW3QNEkB.xml"); // Serie A
-    fetchFeed("#feed-Bundesliga .feed-content", "https://rss.app/feeds/_OFOWQNsn38MFTtLv.xml"); // Bundesliga
-    fetchFeed("#feed-LaLiga .feed-content", "https://rss.app/feeds/_zvRqo1UuuoLB5czl.xml"); // LaLiga
-    fetchFeed("#feed-_5c3ZcfSrwvdwdG2Z .feed-content", "https://rss.app/feeds/_5c3ZcfSrwvdwdG2Z.xml"); // NHL
-
-    // New news feeds.
- fetchFeed(
-  "#feed-UFC .feed-content",
-  "https://rss.app/feeds/_YGmr1TjOD0yXmfU1.xml"
-); // UFC
-
-    fetchFeed("#feed-Boxing .feed-content", "https://rss.app/feeds/_7DfbEtxpn8RPNIMf.xml");
-    fetchFeed("#feed-NASCARCupSeries .feed-content", "https://rss.app/feeds/_D7Q3jbrHjR3bGj8O.xml");
-    fetchFeed("#feed-Tennis .feed-content", "https://rss.app/feeds/_tGSXi2957CegL2kC.xml");
-    fetchFeed("#feed-WNBA .feed-content", "https://rss.app/feeds/_JsIgbwln4EnDHpSE.xml");
-    fetchFeed("#feed-LIVGolf .feed-content", "https://rss.app/feeds/_s7tH2abPc7ZQXhLp.xml");
-    fetchFeed("#feed-IndyCar .feed-content", "https://rss.app/feeds/_TqIJuTCX0SmFe0lM.xml");
-    fetchFeed("#feed-NCAAM .feed-content", "https://rss.app/feeds/_va6EQaZAxOx6z8xR.xml");
-    fetchFeed("#feed-NCAAW .feed-content", "https://rss.app/feeds/_2P4NcD95YPwU8T51.xml");
-    fetchFeed("#feed-NCAABaseball .feed-content", "https://rss.app/feeds/_q2SYr186Ed7j8jud.xml");
-    fetchFeed("#feed-NCAASoftball .feed-content", "https://rss.app/feeds/_y4zf68Y0lK5bkT47.xml");
-    fetchFeed("#feed-MotoGP .feed-content", "https://rss.app/feeds/_4Bpke8POCqxzxfKq.xml");
-    fetchFeed("#feed-LPGATour .feed-content", "https://rss.app/feeds/_a4W47htGlhRlO2ju.xml");
-
-    /***********************
-     * Menu and Search Code *
-     ***********************/
-    let selectedSection = "Home";
-    document.querySelectorAll(".menu-filter").forEach(filter => {
-      filter.addEventListener("click", () => {
-        document.getElementById("menuSearch").value = "";
-        ["123", "az", "group"].forEach(type => {
-          document.querySelectorAll("#menuList-" + type + " li").forEach(li => {
-            li.style.display = "";
-          });
-        });
-        document.querySelectorAll(".menu-filter").forEach(f => f.classList.remove("active"));
-        filter.classList.add("active");
-        const type = filter.dataset.filter;
-        document.getElementById("menuList-123").style.display = type === "123" ? "block" : "none";
-        document.getElementById("menuList-az").style.display = type === "az" ? "block" : "none";
-        document.getElementById("menuList-group").style.display = type === "group" ? "block" : "none";
-        const newList = document.getElementById("menuList-" + type);
-        if (newList) {
-          newList.querySelectorAll("li[data-section]").forEach(li => {
-            li.classList.toggle("selected", li.dataset.section === selectedSection);
-          });
-        }
-      });
-    });
-
-    document.querySelectorAll("#menuList li").forEach(item => {
-      item.addEventListener("click", e => {
-        if (item.classList.contains("spacer-line") || item.classList.contains("soccer-more-toggle")) {
-          e.stopPropagation();
-          return;
-        }
-        e.stopPropagation();
-        if (item.dataset.section) {
-          selectedSection = item.dataset.section;
-        }
-        document.querySelectorAll("#menuList li[data-section]").forEach(li => li.classList.remove("selected"));
-        item.classList.add("selected");
-        const section = item.dataset.section;
-        document.querySelectorAll(".news .content-section").forEach(s => s.style.display = "none");
-        document.querySelectorAll(".social .content-section").forEach(s => s.style.display = "none");
-        const news = document.getElementById("news-" + section);
-        const social = document.getElementById("social-" + section);
-        if (news) {
-          news.style.display = "block";
-          if (section === "Home") {
-            document.getElementById("newsSubMenu").style.display = "flex";
-            const container = document.querySelector(".news");
-            container.scrollTop = 0;
-            container.dispatchEvent(new Event("scroll"));
-          } else {
-            document.getElementById("newsSubMenu").style.display = "none";
-          }
-        }
-        if (social) social.style.display = "block";
-      });
-    });
-
-    const feeds = ["feed-ESPN", "feed-CBS", "feed-FOX", "feed-Yahoo"];
-    const newsPanel = document.querySelector(".news");
-    newsPanel.addEventListener("scroll", () => {
-      const top = newsPanel.getBoundingClientRect().top;
-      const offset = document.getElementById("newsSubMenu").offsetHeight + 50;
-      let active = 0;
-      for (let i = 0; i < feeds.length; i++) {
-        const el = document.getElementById(feeds[i]);
-        if (!el) continue;
-        const h4 = el.querySelector("h4");
-        if (!h4) continue;
-        if (h4.getBoundingClientRect().top > top + offset) break;
-        active = i;
-      }
-      const feedName = feeds[active].replace("feed-", "").toLowerCase();
-      document.querySelectorAll(".news-menu-item").forEach(item => {
-        item.classList.toggle("active", item.dataset.feed.toLowerCase() === feedName);
-      });
-    });
-
-    document.getElementById("menuSearch").addEventListener("keyup", function () {
-      const query = this.value.toLowerCase();
-      const activeFilterElem = document.querySelector(".menu-filter.active");
-      if (!activeFilterElem) return;
-      const activeFilter = activeFilterElem.dataset.filter;
-      const activeList = document.getElementById("menuList-" + activeFilter);
-      if (activeList) {
-        activeList.querySelectorAll("li").forEach(li => {
-          li.style.display = li.textContent.toLowerCase().includes(query) ? "" : "none";
-        });
-      }
-    });
-
-    window.toggleSoccerMore = function () {
-      const section = document.getElementById("soccer-more");
-      const toggle = document.querySelector(".soccer-more-toggle");
-      const expanded = section.style.display === "block";
-      section.style.display = expanded ? "none" : "block";
-      toggle.textContent = expanded ? "More…" : "Less…";
-    };
-
-    document.querySelectorAll(".rss-feed a").forEach(link => {
-      link.setAttribute("target", "_blank");
-      link.addEventListener("click", () => {
-        link.classList.add("clicked");
-      });
-    });
-  });
-</script>
+    <!-- SINGLE RSS.app script load (only once) -->
+   <div id="news-UFC" class="content-section" style="display: none;">
+  <div class="rss-feed" id="feed-UFC">
+    <h4>UFC</h4>
+    <div class="feed-content">Loading UFC feed...</div>
+  </div>
+</div>
 
 
-
-
+    </script>
   </body>
 </html>
-
 
 
 
